fix: change gap between card to 15px

--- a/src/components/ui/Row/row.module.css
+++ b/src/components/ui/Row/row.module.css
@@ -11,7 +11,7 @@
   margin-top: 10px;
   margin-bottom: 30px;
   display: flex;
-  gap: 10px;
+  gap: 15px;
 
   /* overflow-x: scroll; */
 }
